<resources>
    <string name="app_name">新生专题</string>
    <string name="special_2017_homepage_name">2017迎新网</string>
    <string name="special_2017_strategy">邮子攻略</string>
    <string name="special_2017_data">重邮数据</string>
    <string name="special_2017_training">军训特辑</string>
    <string name="special_2017_build_name">建筑名称</string>
    <string name="special_2017_build_description">建筑描述(略去100字)</string>
    <string name="special_2017_load_more">加载更多</string>
    <string name="special_2017_load_finish_no_more">没有更多了</string>
    <string name="special_2017_loading">加载中...</string>
    <string name="special_2017_load_fail">加载失败</string>
    <string name="special_2017_image_detail">查看大图</string>
    <string name="special_2017_video_title">军训有关视频</string>
    <string name="special_2017_student_dormitory_name">1、5、6栋</string>
    <string name="special_2017_student_dormitory_desc">1、5、6栋是我校最豪华的公寓</string>
    <string name="special_2017_school_dinner_name">千喜鹤食堂</string>
    <string name="special_2017_school_dinner_desc">千喜鹤食堂是我校最高大上的食堂</string>
    <string name="special_2017_enter_school_need_know_name">报道需知</string>
    <string name="special_2017_enter_school_need_know_desc">报道时请将身份证、录取通知书、档案袋、团组织档案等交给学校</string>
    <string name="special_2017_qq_group_search_hint">请输入地区或者学院</string>
    <string name="special_2017_search_item_result_hint">我是搜索结果</string>
    <string name="special_2017_search_result_no_more">搜索结果显示完毕，没有更多了</string>
    <string name="special_2017_daily_life_name">农村商业银行</string>
    <string name="special_2017_daily_life_loc">位置：重庆邮电大学某角落,位置描述有点多，巴拉巴拉</string>
    <string name="special_2017_daily_life_desc">简介</string>
    <string name="special_2017_good_food_name">荣昌烧烤</string>
    <string name="special_2017_good_food_loc">位置：问我在哪儿？不知道自己去找？哼</string>
    <string name="special_2017_good_food_desc">简介：据说去吃过这家店的大学生都不会后悔，你知道为什么吗？</string>
    <string name="special_2017_scence_name">南山一棵树</string>
    <string name="special_2017_scence_loc">位置：敢问路在何方？路在脚下，敢问路在何方？我在脚脚~~脚下</string>
    <string name="special_2017_scence_desc">简介：我发誓它不止一棵树，想象一下一对情侣看着夜景，哦豁(单身狗勿喷)</string>
    <string name="special_2017_picker_college">请选择学院</string>
    <string name="special_2017_picker_major">请选择专业</string>
    <string name="special_2017_girl_desc">女生</string>
    <string name="special_2017_boy_desc">男生</string>
    <string name="special_2017_diff">高数</string>
    <string name="special_2017_just">大物</string>
    <string name="special_2017_easy">数值计算</string>
    <string name="special_2017_work">已就业</string>
    <string name="special_2017_not_work">未就业</string>
    <string name="special_2017_suggest_title">军训准备</string>
    <string name="special_2017_suggest_content">军训的准备内容有(吧啦吧啦)</string>
    <string name="special_2017_scense_content">军训的风采很丰富(吧啦吧啦)</string>
</resources>
