<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="130dp">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:background="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitStart"
                    android:src="@mipmap/ic_launcher"
                    android:id="@+id/good_food_image"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="3.5"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:paddingLeft="10dp"
                    android:textColor="#292421"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:text="@string/special_2017_good_food_name"
                    android:textSize="15dp"
                    android:id="@+id/good_food_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:drawableLeft="@drawable/ic_event_note_gray_24dp"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="8dp"
                    android:textColor="#808A87"
                    android:id="@+id/good_food_desc"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:text="@string/special_2017_good_food_desc"
                    android:textSize="13dp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:paddingTop="18dp"
                    android:id="@+id/good_food_loc"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2.5"
                    android:drawableLeft="@drawable/ic_location_on_gray_24dp"
                    android:padding="10dp"
                    android:text="@string/special_2017_good_food_loc"
                    android:textSize="13dp"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>